# practice-code

./: .gitignore  README.md  ThreadSafeCache.h  threadsafe-cache.sh
01_threadsafe_cache_cpp/: ThreadSafeCache.h  ThreadSafeCache_Main.cpp  threadsafe-cache.sh
02_threadsafe_cache_rust/: Cargo.toml  threadsafe-cache-rust.sh
02_threadsafe_cache_rust/src/: main.rs
03_longest_substring/: main.cpp  run.sh
04_longest_substring/: Cargo.toml  run.sh
04_longest_substring/src/: main.rs
05_sample_REST/: build.gradle  settings.gradle
05_sample_REST/src/main/java/com/nomad/: Application.java
05_sample_REST/src/main/java/com/nomad/controller/: SampleRestController.java
05_sample_REST/src/main/java/com/nomad/entity/: Transaction.java
05_sample_REST/src/main/java/com/nomad/model/: Reply.java
05_sample_REST/src/main/java/com/nomad/repository/: TransactionRepository.java
05_sample_REST/src/main/java/com/nomad/service/: TransactionService.java
05_sample_REST/src/main/resources/: application.yml
06_encode_decoder_cpp/: CMakeLists.txt  FileDecoder.java  Makefile  README.md  README_Java.md  README_Rocky.md  build.sh  build_java.sh  build_rocky.sh  encoder_decoder  main.cpp  ref.txt  ref.txt.encoded  sample.txt.encoded
06_encode_decoder_cpp/include/: README.md
07_rust_with_cpp/: Cargo.toml  README.md  build.rs  build.sh
07_rust_with_cpp/cpp/: CMakeLists.txt  example.cpp  example.h
07_rust_with_cpp/src/: ffi.rs  main.rs  wrapper.rs
